--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,10 @@ CLIENT_PORT=3000
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=
 DB_PORT=3306
-DB_DATABASE=420portal
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -28,12 +28,12 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=noreply420portal@gmail.com
-MAIL_PASSWORD=ofekaxaewewiwmsq
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
 
-MAIL_FROM_NAME="420Portal"
-MAIL_FROM_ADDRESS=noreply420portal@google.com
+MAIL_FROM_NAME=
+MAIL_FROM_ADDRESS=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
